[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/RocketShip.png" type="Texture" id=1]
[ext_resource path="res://RocketShip.gd" type="Script" id=2]
[ext_resource path="res://Assets/particle.png" type="Texture" id=3]
[ext_resource path="res://Assets/better_dort.png" type="Texture" id=4]
[ext_resource path="res://Assets/progressbar.png" type="Texture" id=5]
[ext_resource path="res://Assets/progressbarprogress.png" type="Texture" id=6]
[ext_resource path="res://Assets/lato/Lato-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Bottle Rocket-SoundBible.com-332895117.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/sfx-pop3/sfx-pop3.mp3" type="AudioStream" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.7537
height = 31.8878

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.64413
height = 28.0918

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 7 )

[node name="RocketShip" type="RigidBody2D"]
collision_layer = 3
gravity_scale = 3.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.8
angular_damp = 2.0
script = ExtResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 22.5551 )
emitting = false
amount = 50
one_shot = true
speed_scale = 1.69
explosiveness = 0.48
randomness = 0.12
lifetime_randomness = 1.0
local_coords = false
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 7, 1 )
direction = Vector2( 0, 1 )
spread = 15.97
gravity = Vector2( 0, 0 )
initial_velocity = 107.53
scale_amount = 0.04
scale_amount_random = 0.02
color = Color( 0.94902, 0.827451, 0.827451, 1 )
hue_variation = 0.01
hue_variation_random = 0.09

[node name="Line2D" type="Line2D" parent="."]
default_color = Color( 0.678431, 0.678431, 0.678431, 1 )
texture = ExtResource( 4 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2.38419e-07 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.58919 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 20.5528 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="RechargeTimer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -169.309 )
current = true
limit_top = -2400
limit_bottom = 698
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 8.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer"]
margin_left = 798.199
margin_top = 95.3498
margin_right = 2798.2
margin_bottom = 2095.35
rect_scale = Vector2( 0.2, 0.2 )
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress2" type="TextureProgress" parent="CanvasLayer"]
margin_left = 798.199
margin_top = 95.3498
margin_right = 2798.2
margin_bottom = 2095.35
rect_scale = Vector2( 0.2, 0.2 )
value = 20.0
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_progress = Color( 0.917647, 0.917647, 0.917647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StandUpPrompt" type="RichTextLabel" parent="CanvasLayer"]
visible = false
margin_left = 374.814
margin_top = 432.0
margin_right = 709.814
margin_bottom = 497.0
custom_fonts/normal_font = SubResource( 3 )
text = "Press \"R\" to stand up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
